# agents

./: .gitignore  README.md  main.py  requirements.txt
agents/: __init__.py  research_agent.py  story_agent.py
anderson_agent/: .gitignore  ADK_ARTIFACT_MIGRATION.md  ANDERSON_AGENT_EXPLANATION.md  ARCHITECTURE_DIAGRAM.md
baptist_health/: firestore_data_viewer.html  reset_demo_data.py  reset_drew_demo.py  reset_rahul_demo.py  synthetic_data_generator.py
cloud_function_deployment/: README.md  main.py  requirements.txt  test_cloud_function.py
fedex/: .env.example  .gitignore  README.md  pyproject.toml
fedex/data/: upload_to_bigquery.py
fedex/docs/: DEMO_SCRIPT.md  README.md  TESTING.md
fedex/fedex_market_intelligence/: __init__.py  agent.py  config.py  prompt.py
fedex/fedex_market_intelligence/tools/: __init__.py  demographics.py  forecasting.py  geographic_analysis.py  trend_analysis.py  visualization.py
fedex/tests/: __init__.py  run_all_tests.py  test_agent.py  test_config.py  test_tools.py
fedex_market_intelligence_agent/: .env.template  DEMO_SCRIPT.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  TECHNICAL_DOCUMENTATION.md  requirements.txt
holland_knight/: .gitignore  README.md  pyproject.toml  requirements.txt
holland_knight/deployment/: deploy.py
holland_knight/holland_knight/: __init__.py  agent.py  prompt.py
holland_knight/holland_knight/sub_agents/document_generation/: __init__.py  agent.py  prompt.py
holland_knight/holland_knight/sub_agents/legal_qa/: __init__.py  agent.py
holland_knight/holland_knight/tools/: __init__.py
inspirational_stories/: README.md  agent.py  demo.py  test_agent.py
multi_tool_agent/: agent.py
old_fedex/: CATEGORY_GUIDE.md  DEMO_PRESENTATION.md  demo.py  pyproject.toml  quick_test.py  starbucks_demo.py  starbucks_demo_auto.py  test_agent.py
old_fedex/database_source_archive/: transform_to_us_data.py  upload_to_bigquery.py  verify_bigquery_data.py
old_fedex/database_source_archive/source-files/: olist_sellers_dataset.csv
old_fedex/fedex_analytics_agent/: __init__.py  agent.py  prompt.py
old_fedex/fedex_analytics_agent/tools/: __init__.py  analysis_tools.py  bigquery_tool.py  visualization_tool.py
presentation_chatbot/: .gitignore  README.md  demo.py
storybook/: .env  README.md  agent.py  requirements.txt
ups/: ANDERSON_AGENT_PRESENTATION.md  DEMO_TALK_TRACK.md  README.md  pyproject.toml
ups/deployment/: deploy.py  test_deployment.py
ups/eval/: test_eval.py
ups/tests/: test_agents.py
ups/ups_developer_assistant/: __init__.py  agent.py  prompt.py
ups/ups_developer_assistant/sub_agents/: __init__.py
ups/ups_developer_assistant/sub_agents/code_generation/: __init__.py  agent.py  prompts.py
ups/ups_developer_assistant/sub_agents/legacy_api_documentation/: __init__.py  agent.py  prompts.py
ups/ups_developer_assistant/sub_agents/search/: __init__.py  agent.py  prompts.py
weekly-project-update-generator/: BACKEND_TECHNICAL.md  (+2 more)
(+131 files in other folders)
