[tool.poetry]
name = "holland-knight"
version = "0.1.0"
description = "Holland Knight Legal Multi-Agent System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "holland_knight"}]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.0.0"
google-cloud-firestore = "^2.13.0"
google-cloud-storage = "^2.10.0"
requests = "^2.31.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
