[tool.poetry]
name = "fedex-site-selection-agent"
version = "1.0.0"
description = "FedEx Site Selection Intelligence Agent - AI-powered location analysis for business expansion"
authors = ["FedEx Analytics Team"]
readme = "README.md"
packages = [{include = "fedex_analytics_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^1.0.0"
google-cloud-bigquery = "^3.28.0"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

